[tool.poetry]
name = "welltodonervousvideogames"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = ">=2.2.5,<4.0.0"
python-chess = ">=0.31.4,<1.1000.0"
fake-factory = "^9999.9.9"
flask-socketio = "^5.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
